[gd_scene load_steps=13 format=2]

[ext_resource path="res://Utilities/m3x6.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Enemies/EnemyLarge.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Enemy2Large.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.568627, 0.568627, 0.568627, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=8]
color = Color( 1, 1, 1, 1 )
thickness = 4

[sub_resource type="StyleBoxLine" id=5]
color = Color( 1, 1, 1, 1 )
vertical = true

[sub_resource type="StyleBoxLine" id=6]
color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 270.0
color = Color( 0.25098, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 480.0
margin_bottom = 270.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 108.0
margin_top = 20.0
margin_right = 372.0
margin_bottom = 250.0
custom_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 264.0
margin_bottom = 102.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 264.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Gladiator"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_left = 70.0
margin_top = 102.0
margin_right = 194.0
margin_bottom = 230.0
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 124.0
margin_bottom = 128.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 124.0
margin_bottom = 128.0
custom_constants/separation = -8

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_right = 124.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer"]
margin_right = 124.0
margin_bottom = 38.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 38.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 124.0
margin_bottom = 38.0
rect_min_size = Vector2( 104, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Start"

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 124.0
margin_bottom = 68.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer4"]
margin_right = 124.0
margin_bottom = 38.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 16.0
margin_bottom = 38.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_left = 20.0
margin_right = 124.0
margin_bottom = 38.0
rect_min_size = Vector2( 104, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Help"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 124.0
margin_bottom = 98.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer2"]
margin_right = 124.0
margin_bottom = 38.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 16.0
margin_bottom = 38.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 20.0
margin_right = 124.0
margin_bottom = 38.0
rect_min_size = Vector2( 104, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Options"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 124.0
margin_bottom = 128.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer3"]
margin_right = 124.0
margin_bottom = 38.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 16.0
margin_bottom = 38.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 20.0
margin_right = 124.0
margin_bottom = 38.0
rect_min_size = Vector2( 104, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Exit"

[node name="DifficultySelect" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer"]
visible = false
margin_left = 128.0
margin_right = 252.0
margin_bottom = 128.0
custom_constants/separation = -8

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect"]
margin_right = 124.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer"]
margin_right = 124.0
margin_bottom = 38.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer/HBoxContainer"]
margin_right = 16.0
margin_bottom = 38.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = ">"

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 124.0
margin_bottom = 38.0
rect_min_size = Vector2( 104, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Easy"

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect"]
margin_top = 30.0
margin_right = 124.0
margin_bottom = 68.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer4"]
margin_right = 124.0
margin_bottom = 38.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer4/HBoxContainer"]
margin_right = 16.0
margin_bottom = 38.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer4/HBoxContainer"]
margin_left = 20.0
margin_right = 124.0
margin_bottom = 38.0
rect_min_size = Vector2( 104, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Medium"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect"]
margin_top = 60.0
margin_right = 124.0
margin_bottom = 98.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer2"]
margin_right = 124.0
margin_bottom = 38.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer2/HBoxContainer"]
margin_right = 16.0
margin_bottom = 38.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer2/HBoxContainer"]
margin_left = 20.0
margin_right = 124.0
margin_bottom = 38.0
rect_min_size = Vector2( 104, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Hard"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect"]
margin_top = 90.0
margin_right = 124.0
margin_bottom = 128.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer3"]
margin_right = 124.0
margin_bottom = 38.0

[node name="Selector" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer3/HBoxContainer"]
margin_right = 16.0
margin_bottom = 38.0
rect_min_size = Vector2( 16, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )

[node name="OptionName" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/HBoxContainer/DifficultySelect/CenterContainer3/HBoxContainer"]
margin_left = 20.0
margin_right = 124.0
margin_bottom = 38.0
rect_min_size = Vector2( 104, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Extreme"

[node name="OptionsMenu" type="CenterContainer" parent="."]
visible = false
margin_right = 480.0
margin_bottom = 270.0

[node name="PanelContainer" type="PanelContainer" parent="OptionsMenu"]
margin_left = 238.0
margin_top = 133.0
margin_right = 242.0
margin_bottom = 137.0
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsMenu/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 212.0
margin_bottom = 88.0

[node name="MasterVolume" type="HBoxContainer" parent="OptionsMenu/PanelContainer/VBoxContainer"]
margin_right = 210.0
margin_bottom = 26.0
rect_min_size = Vector2( 210, 0 )

[node name="Selector" type="Label" parent="OptionsMenu/PanelContainer/VBoxContainer/MasterVolume"]
margin_right = 8.0
margin_bottom = 26.0
rect_min_size = Vector2( 8, 0 )
custom_fonts/font = SubResource( 4 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsMenu/PanelContainer/VBoxContainer/MasterVolume"]
margin_left = 12.0
margin_right = 146.0
margin_bottom = 26.0
rect_min_size = Vector2( 134, 0 )
custom_fonts/font = SubResource( 4 )
text = "Master Volume:"

[node name="Volume" type="Label" parent="OptionsMenu/PanelContainer/VBoxContainer/MasterVolume"]
margin_left = 150.0
margin_right = 210.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 4 )
text = "< 100 >"

[node name="SoundEffectVolume" type="HBoxContainer" parent="OptionsMenu/PanelContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 210.0
margin_bottom = 56.0
rect_min_size = Vector2( 210, 0 )

[node name="Selector" type="Label" parent="OptionsMenu/PanelContainer/VBoxContainer/SoundEffectVolume"]
margin_right = 8.0
margin_bottom = 26.0
rect_min_size = Vector2( 8, 0 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsMenu/PanelContainer/VBoxContainer/SoundEffectVolume"]
margin_left = 12.0
margin_right = 146.0
margin_bottom = 26.0
rect_min_size = Vector2( 134, 0 )
custom_fonts/font = SubResource( 4 )
text = "Sound Effects:"

[node name="Volume" type="Label" parent="OptionsMenu/PanelContainer/VBoxContainer/SoundEffectVolume"]
margin_left = 150.0
margin_right = 210.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 4 )
text = "< 100 "

[node name="MusicVolume" type="HBoxContainer" parent="OptionsMenu/PanelContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 210.0
margin_bottom = 86.0
rect_min_size = Vector2( 210, 0 )

[node name="Selector" type="Label" parent="OptionsMenu/PanelContainer/VBoxContainer/MusicVolume"]
margin_right = 8.0
margin_bottom = 26.0
rect_min_size = Vector2( 8, 0 )
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OptionsMenu/PanelContainer/VBoxContainer/MusicVolume"]
margin_left = 12.0
margin_right = 146.0
margin_bottom = 26.0
rect_min_size = Vector2( 134, 0 )
custom_fonts/font = SubResource( 4 )
text = "Background Music:"

[node name="Volume" type="Label" parent="OptionsMenu/PanelContainer/VBoxContainer/MusicVolume"]
margin_left = 150.0
margin_right = 210.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 4 )
text = "< 100 "

[node name="HelpMenu" type="CenterContainer" parent="."]
visible = false
margin_right = 480.0
margin_bottom = 270.0

[node name="PanelContainer" type="PanelContainer" parent="HelpMenu"]
margin_left = 238.0
margin_top = 133.0
margin_right = 242.0
margin_bottom = 137.0
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="HelpMenu/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 389.0
margin_bottom = 253.0

[node name="CenterContainer" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer"]
margin_right = 387.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer"]
margin_left = 97.0
margin_right = 289.0
margin_bottom = 26.0
rect_min_size = Vector2( 134, 0 )
custom_fonts/font = SubResource( 4 )
text = "Help: (ANY KEY TO CLOSE)"
align = 1
uppercase = true

[node name="HSeparator2" type="HSeparator" parent="HelpMenu/PanelContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 387.0
margin_bottom = 34.0
custom_styles/separator = SubResource( 8 )

[node name="CenterContainer3" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 387.0
margin_bottom = 124.0

[node name="HBoxContainer" type="HBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3"]
margin_left = 50.0
margin_right = 336.0
margin_bottom = 86.0

[node name="VBoxContainer" type="VBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 156.0
margin_bottom = 86.0

[node name="MasterVolume" type="HBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer"]
margin_right = 156.0
margin_bottom = 26.0

[node name="Selector" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer/MasterVolume"]
margin_right = 86.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "Arrow Keys"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer/MasterVolume"]
margin_left = 90.0
margin_right = 150.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 4 )
text = "- Move"

[node name="SoundEffectVolume" type="HBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 156.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer/SoundEffectVolume"]
margin_right = 86.0
margin_bottom = 26.0
rect_min_size = Vector2( 86, 0 )
custom_fonts/font = SubResource( 4 )
text = "Shift"
align = 2

[node name="Volume" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer/SoundEffectVolume"]
margin_left = 90.0
margin_right = 150.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 4 )
text = "- Dash"

[node name="MusicVolume" type="HBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 156.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer/MusicVolume"]
margin_right = 86.0
margin_bottom = 26.0
rect_min_size = Vector2( 86, 0 )
custom_fonts/font = SubResource( 4 )
text = "Space"
align = 2

[node name="Volume" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer/MusicVolume"]
margin_left = 90.0
margin_right = 156.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 4 )
text = "- Attack"

[node name="VSeparator" type="VSeparator" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 160.0
margin_right = 164.0
margin_bottom = 86.0
custom_styles/separator = SubResource( 5 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_left = 168.0
margin_right = 286.0
margin_bottom = 86.0

[node name="MasterVolume" type="HBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer2"]
margin_right = 118.0
margin_bottom = 26.0

[node name="Selector" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer2/MasterVolume"]
margin_right = 8.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "K"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer2/MasterVolume"]
margin_left = 12.0
margin_right = 118.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 4 )
text = "- Stats/Debug"

[node name="SoundEffectVolume" type="HBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer2"]
margin_top = 30.0
margin_right = 118.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer2/SoundEffectVolume"]
margin_right = 8.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "G"

[node name="Volume" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer2/SoundEffectVolume"]
margin_left = 12.0
margin_right = 90.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 4 )
text = "- GodMode"

[node name="MusicVolume" type="HBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer2"]
margin_top = 60.0
margin_right = 118.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer2/MusicVolume"]
margin_right = 8.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "I"

[node name="Volume" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/CenterContainer3/HBoxContainer/VBoxContainer2/MusicVolume"]
margin_left = 12.0
margin_right = 108.0
margin_bottom = 26.0
rect_min_size = Vector2( 60, 0 )
custom_fonts/font = SubResource( 4 )
text = "- Skip Round"

[node name="HSeparator" type="HSeparator" parent="HelpMenu/PanelContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 387.0
margin_bottom = 132.0
custom_styles/separator = SubResource( 6 )

[node name="HBoxContainer3" type="HBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 387.0
margin_bottom = 247.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3"]
margin_right = 120.0
margin_bottom = 111.0

[node name="CenterContainer2" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_right = 120.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer/CenterContainer2"]
margin_left = 20.0
margin_right = 100.0
margin_bottom = 26.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 4 )
text = "Fighter"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 30.0
margin_right = 120.0
margin_bottom = 62.0

[node name="TextureRect" type="TextureRect" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer/CenterContainer"]
margin_left = 44.0
margin_right = 76.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="CenterContainer3" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 66.0
margin_right = 120.0
margin_bottom = 79.0

[node name="Label" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer/CenterContainer3"]
margin_right = 120.0
margin_bottom = 13.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 7 )
text = "Standard Enemy, Low DMG"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 111.0

[node name="CenterContainer2" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
margin_right = 120.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/CenterContainer2"]
margin_left = 20.0
margin_right = 100.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 4 )
text = "Swordsman"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
margin_top = 30.0
margin_right = 120.0
margin_bottom = 62.0

[node name="TextureRect" type="TextureRect" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/CenterContainer"]
margin_left = 44.0
margin_right = 76.0
margin_bottom = 32.0
texture = ExtResource( 4 )

[node name="CenterContainer3" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer2"]
margin_top = 66.0
margin_right = 120.0
margin_bottom = 95.0

[node name="Label" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer2/CenterContainer3"]
margin_right = 120.0
margin_bottom = 29.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 7 )
text = "+1 Health, Medium DMG
Spawns after every 4 Fighters"
align = 1

[node name="VSeparator" type="VSeparator" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 248.0
margin_right = 252.0
margin_bottom = 111.0
custom_styles/separator = SubResource( 5 )

[node name="VBoxContainer3" type="VBoxContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3"]
margin_left = 256.0
margin_right = 387.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer3"]
margin_right = 131.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer3/CenterContainer2"]
margin_left = 25.0
margin_right = 105.0
margin_bottom = 26.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = SubResource( 4 )
text = "Difficulty"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer3"]
margin_top = 30.0
margin_right = 131.0
margin_bottom = 30.0

[node name="CenterContainer3" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer3"]
margin_top = 34.0
margin_right = 131.0
margin_bottom = 111.0

[node name="Label" type="Label" parent="HelpMenu/PanelContainer/VBoxContainer/HBoxContainer3/VBoxContainer3/CenterContainer3"]
margin_right = 131.0
margin_bottom = 77.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 7 )
text = "Easy: 6 enemies, +4 per round
Medium: 10 enemies, +8 per round
Hard: 18 enemies, +12 per round
Extreme: Hard with no healing
Harder, faster enemies spawn"

[node name="CenterContainer2" type="CenterContainer" parent="HelpMenu/PanelContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 387.0
margin_bottom = 251.0
